# FCLCollisionChecker

./: .gitignore  CMakeLists.txt  FCLCollisionChecker.h  FCLCollisionChecker.m  README.md  compile_mfcl.m  fcl_collision_checker_interface.cpp  prep_dependencies.sh  test_fcl.m
dependencies/: .gitignore
dependencies/fcl_new/: .gitignore
examples/: CMakeLists.txt  build.sh  test_basic_collision.cpp  test_fcl.m
examples/data/: geom_test.bt  geom_test.stl
include/: FCLCollisionChecker.h
matlab_binding/: FCLCollisionChecker.m
src/: fcl_collision_checker_interface.cpp
